prevent overflowing on smaller displays

--- a/css/gidungjido.css
+++ b/css/gidungjido.css
@@ -174,6 +174,9 @@ p {
 	
 	background-color: rgba(68, 68, 68, 0.4);
 
+
+	overflow: auto;
+
 }
 
 
